; ModuleID = '/home/carl/AnghaBench/git/extr_connect.c_finish_connect.c'
source_filename = "/home/carl/AnghaBench/git/extr_connect.c_finish_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.child_process = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @finish_connect(%struct.child_process* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.child_process*, align 8
  %4 = alloca i32, align 4
  store %struct.child_process* %0, %struct.child_process** %3, align 8
  %5 = load %struct.child_process*, %struct.child_process** %3, align 8
  %6 = icmp ne %struct.child_process* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load %struct.child_process*, %struct.child_process** %3, align 8
  %9 = call i64 @git_connection_is_socket(%struct.child_process* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %7, %1
  store i32 0, i32* %2, align 4
  br label %18

12:                                               ; preds = %7
  %13 = load %struct.child_process*, %struct.child_process** %3, align 8
  %14 = call i32 @finish_command(%struct.child_process* %13)
  store i32 %14, i32* %4, align 4
  %15 = load %struct.child_process*, %struct.child_process** %3, align 8
  %16 = call i32 @free(%struct.child_process* %15)
  %17 = load i32, i32* %4, align 4
  store i32 %17, i32* %2, align 4
  br label %18

18:                                               ; preds = %12, %11
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i64 @git_connection_is_socket(%struct.child_process*) #1

declare dso_local i32 @finish_command(%struct.child_process*) #1

declare dso_local i32 @free(%struct.child_process*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
